<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jusoor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="jusoor">Jusoor-Syrians Forward Together</string>
    <string name="emailAddress">EmailAddress</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    

</resources>
